<resources>
    <string name="app_name">Laboratorio4</string>
    <string name="facebook_app_id">4024262317643710</string>
    <string name="fb_login_protocol_scheme">fb4024262317643710</string>
    <string name="msj">msj</string>
    <string name="imagen">Imagen</string>
    <string name="todo">TODO</string>
    <string name="subir_foto">Subir foto</string>
    <string name="a_adir_foto">añadir foto</string>
    <string name="subir_foto">Subir foto</string>
    <string name="descripcion">Descripcion</string>
    <string name="introduzca_descripcion">Introduzca descripcion</string>
    <string name="subir_foto">Subir foto</string>
    <string name="previsualizacion">Previsualizacion</string>

</resources>